# webhook-dvr

./: .env.example  LICENSE  MakeFile  README.md  README_clean.md  compose.yaml  create-table.py  pyproject.toml  test_receiver.py
app/: storage.py
app/api/: deps.py  routes.py
app/core/: config.py
app/db/: models.py  session.py
webhook_dvr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
